[package]
name = "lgtv"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
lg-webos-client = "0.5"
nix = { version = "0.29", features = ["fs", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
home = "0.5"
tokio-tungstenite = "0.18"
futures-util = "0.3"
